--- a/configuration.yaml
+++ b/configuration.yaml
@@ -8,6 +8,9 @@ default_config:
 http:
   ip_ban_enabled: true
   login_attempts_threshold: 5
+  base_url: monkeyplanet.duckdns.org:8123
+  ssl_certificate: /ssl/fullchain.pem
+  ssl_key: /ssl/privkey.pem  
 
 # Text to speech
 tts:
