--- a/automations.yaml
+++ b/automations.yaml
@@ -1,1 +1,26 @@
-[]
+- id: '1578361757420'
+  alias: Turn on light when motion detected
+  description: ''
+  trigger:
+  - entity_id: binary_sensor.kitchen_motion_sensor
+    platform: state
+    to: 'on'
+  condition: []
+  action:
+  - data:
+      brightness: 255
+      effect: rainbow
+    entity_id: light.kitchen_led
+    service: light.turn_on
+- id: '1578361849455'
+  alias: Turn off light when motion off
+  description: ''
+  trigger:
+  - entity_id: binary_sensor.kitchen_motion_sensor
+    platform: state
+    to: 'off'
+  condition: []
+  action:
+  - entity_id: light.kitchen_led
+    service: light.turn_off
+
